--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,18 @@
     box-sizing: border-box;
 }
 
+/* Focus: hide default outline on click, show styled ring on keyboard nav */
+button:focus:not(:focus-visible),
+.cell:focus:not(:focus-visible) {
+    outline: none;
+}
+
+button:focus-visible,
+.cell:focus-visible {
+    outline: 2px solid var(--color-primary);
+    outline-offset: -2px;
+}
+
 :root {
     --cell-size: min(10vw, 56px);
     --board-gap: 1px;
