add valtio; add undo

--- a/src/index.css
+++ b/src/index.css
@@ -239,6 +239,13 @@ h1 {
     border-color: var(--color-primary);
 }
 
+.undo-btn {
+    width: auto;
+    padding: 0 16px;
+    font-size: 0.85rem;
+    color: #555;
+}
+
 .erase-btn {
     width: auto;
     padding: 0 16px;
