change user number color

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ button:focus-visible {
     --color-error: #ffcdd2;
     --color-error-text: #c62828;
     --color-initial: #344861;
-    --color-player: #1565c0;
+    --color-player: #2196f3;
     --color-primary: #1976d2;
 }
 
